a simple version with a popup

--- a/www/index.html
+++ b/www/index.html
@@ -49,7 +49,7 @@
                     
                 <div>
                     <a href="#" 
-                       onclick="spinup();" 
+                       onclick="call_fire();" 
                        data-role="button" 
                        data-theme="a">
                         Launch
